--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Reservation</title>
 	<script type="text/javascript" src='opentable.js'></script>
 	<script type="text/javascript" src='yelp.js'></script>
+	<script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
 </head>
 <body>
 
